cholo ekshate doore thaki