@@ -1,6 +1,7 @@
 public class WrapDemo {
     public static void main(String args[]) {
-        Integer iOb = new Integer(100); //boxing
+        //Integer iOb = new Integer(100);//boxing //ei constructor ekhon depricated
+        Integer iOb=Integer.valueOf(100); //boxing
         int i = iOb.intValue(); // unboxing
         Integer iObNew = 200; // auto-boxing
         int inew = iObNew; // autounboxing
